// Protocol Version 1

package embedded_type;

option optimize_for = LITE_RUNTIME;

message EmbeddedType {
    message Container {
        message Inner {
            optional string value = 1;
        }

        repeated Inner values = 1;
    }

    optional Container sub_field = 4;
    optional Container.Inner sub_sub_field = 5;
}
